--- a/src/app/pages/inicio/inicio.page.html
+++ b/src/app/pages/inicio/inicio.page.html
@@ -26,5 +26,12 @@
     Action Sheet
   </ion-button>
   -->
+ <ion-item> 
+    <ion-avatar slot="start">
+      <img alt="Silhouette of a person's head" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+    </ion-avatar>
+    <ion-label>Leslie Macias</ion-label>
+  </ion-item>
 
+  <ion-button>Ingresar</ion-button> <ion-button [disabled]="true">Cerrar sesión</ion-button>
 </ion-content>
